# zyxxy2_examples

./: .gitignore  FUNCTION_REFERENCE.txt  MY_yyyyy_FUNCTION_REFERENCE.txt  MY_yyyyy_SETTINGS_general.py  MY_yyyyy_demo_DUMP.py  README.md  catch_a_checker.py  catch_the_sunlight.py  demo_all_yyyyy_shapes.py  demo_mult_table.py  demo_trigo.py  demo_yyyyy_shape.py  demo_zzzzz_shape.py  draw_a_cat.py  draw_a_cat_with_gradient_fur.py  draw_a_chessboard.py  draw_a_flag_of_Belgium.py  draw_a_flag_of_Cuba.py  draw_a_flag_of_Finland.py  draw_a_flag_of_Japan.py  draw_a_flag_of_Japanese_navy.py  draw_a_flag_of_the_UK.py  draw_a_flag_of_the_USA.py  draw_a_gradient.py  draw_a_princess.py  draw_a_stickman.py  draw_a_xmas_tree.py  draw_aa_vanishing_point.py  draw_fancy_letters.py  draw_perspective.py  draw_puzzle_segments.py  draw_random_segments.py  draw_rectangles.py  draw_simple_letters.py  draw_sun_and_moon.py  drawn_a_Coccinelle.py  drawn_blue_green_mandala.py  drawn_puzzle_Pythagoras.py  drawn_puzzle_circle.py  gradient_rectangle.py  (+17 more)
src/zyxxy2/: MY_yyyyy_SETTINGS_demo.py  MY_yyyyy_SETTINGS_general.py  MY_yyyyy_SETTINGS_widgets.py  demo_yyyyy_shape_helper.py  yyyyy_all_EXAMPLES.py  yyyyy_animation.py  yyyyy_clean.py  yyyyy_layers.py  yyyyy_tests.py  yyyyy_utils.py  yyyyy_widgets.py  yyyyy_word_bubbles.py
